--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
   schedule:
-    - corn: "0 5 * * *"
+    - cron: "0 5 * * *"
 jobs:
   demo:
     runs-on: ubuntu-latest
@@ -14,8 +14,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4.5.0
         with:
-          python3-version: "3.11"
-      - name: Install Python Dependency
+          python-version: "3.11"
       - name: Run index.py
         run: python index.py
       - name: Commit Data Back To GitHub Repo
