--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.PAT }}
       - name: Setup Python
         uses: actions/setup-python@v4.5.0
         with:
