--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -10,6 +10,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.PAT }}
+          fetch-depth: 0 
       - name: Setup Python
         uses: actions/setup-python@v4.5.0
         with:
@@ -20,5 +21,7 @@ jobs:
         run: |
           git config --global user.name "github-action demo"
           git config --global user.email "jeter.chen@highercloud.com.tw"
-          git add . && git commit -m "daily return"
+          git pull origin main
+          git add .
+          git commit -m "daily return"
           git push origin main
